Added: Correct flow of screens

--- a/SunFinder/app/src/main/res/layout/activity_geo_list.xml
+++ b/SunFinder/app/src/main/res/layout/activity_geo_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ch.msengineering.sunfinder.LocationListActivity">
+    tools:context="ch.msengineering.sunfinder.GeoListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -27,7 +27,15 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/location_list" />
+        <include layout="@layout/geo_list" />
     </FrameLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_menu_compass" />
 
 </android.support.design.widget.CoordinatorLayout>
