Added: Pictures and Link to Map etc.

--- a/SunFinder/app/src/main/res/layout/activity_location_detail.xml
+++ b/SunFinder/app/src/main/res/layout/activity_location_detail.xml
@@ -30,6 +30,13 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:scaleType="centerCrop" />
+
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -48,6 +55,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/location_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+        app:srcCompat="@android:drawable/ic_menu_mapmode" />
 
 </android.support.design.widget.CoordinatorLayout>
