--- a/SunFinder/app/src/main/res/layout/location_list_content.xml
+++ b/SunFinder/app/src/main/res/layout/location_list_content.xml
@@ -14,9 +14,10 @@
         android:layout_marginEnd="@dimen/text_margin" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/name"
@@ -44,5 +45,12 @@
             android:textAppearance="?attr/textAppearanceListItem" />
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
+        android:alpha="0.2" />
 
 </LinearLayout>
