--- a/SunFinder/app/src/main/res/layout/location_detail.xml
+++ b/SunFinder/app/src/main/res/layout/location_detail.xml
@@ -37,4 +37,20 @@
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem" />
 
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:numStars="5"
+        android:stepSize="0.1"
+        android:visibility="visible"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/push_rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/rate_text" />
+
 </LinearLayout>
