--- a/SunFinder/app/src/main/res/layout/location_list_content.xml
+++ b/SunFinder/app/src/main/res/layout/location_list_content.xml
@@ -44,6 +44,15 @@
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem" />
 
+        <RatingBar
+            android:id="@id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/ratingBarStyleSmall"
+            android:numStars="5"
+            android:stepSize="0.1"
+            android:isIndicator="true" />
+
     </LinearLayout>
 
     <ImageView
