Added courtesy for webcam.travel in the locationDetailActivity
Signed-off-by: Raphael <raphael_zingg@hotmail.ch>

--- a/SunFinder/app/src/main/res/layout/location_detail.xml
+++ b/SunFinder/app/src/main/res/layout/location_detail.xml
@@ -6,6 +6,13 @@
     android:orientation="vertical"
     tools:context="ch.msengineering.sunfinder.LocationDetailFragment">
 
+
+    <TextView
+        android:id="@+id/courtesy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
     <TextView
         android:id="@+id/name"
         style="?android:attr/textAppearanceLarge"
