--- a/SunFinder/app/src/main/res/layout/activity_geo_list.xml
+++ b/SunFinder/app/src/main/res/layout/activity_geo_list.xml
@@ -23,9 +23,9 @@
                 android:id="@+id/search_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:iconifiedByDefault="true"
-                android:queryHint="@string/action_search"
-                android:layout_gravity="end" />
+                android:queryHint="@string/action_search" />
 
         </android.support.v7.widget.Toolbar>
 
