--- a/SunFinder/app/src/main/res/layout/activity_location_detail.xml
+++ b/SunFinder/app/src/main/res/layout/activity_location_detail.xml
@@ -1,12 +1,12 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/location_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="ch.msengineering.sunfinder.LocationDetailActivity"
-    tools:ignore="MergeRootFrame"
-    android:id="@+id/location_detail">
+    tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
