--- a/SunFinder/app/src/main/res/layout/geo_list_content.xml
+++ b/SunFinder/app/src/main/res/layout/geo_list_content.xml
@@ -8,8 +8,8 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/name"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
-        android:alpha="0.2" />
+        android:alpha="0.2"
+        android:src="@drawable/ic_keyboard_arrow_right_black_48dp" />
 
 </LinearLayout>
