--- a/SunFinder/app/src/main/res/layout/activity_welcome.xml
+++ b/SunFinder/app/src/main/res/layout/activity_welcome.xml
@@ -9,19 +9,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="237dp"
+        android:layout_height="185dp"
         android:orientation="horizontal">
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="189dp"
             android:orientation="horizontal">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="167dp"
                 android:orientation="horizontal">
 
 
@@ -39,13 +39,23 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="364dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Where should I look for sun?"
+            android:textAppearance="@android:style/TextAppearance.Material.Title"
+            android:textSize="30sp">
+
+        </TextView>
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="Where should I look for sun?"
             android:textAppearance="@android:style/TextAppearance.Material.Title"
@@ -63,24 +73,42 @@
             android:layout_marginTop="21dp"
             android:backgroundTint="@color/black_overlay"
             android:hint="Enter a location"
-            android:text="Zürich"
             android:textColorLink="@android:color/holo_orange_dark"
             android:textCursorDrawable="@drawable/orange_crusor"
             android:textSize="30sp"
             tools:textStyle="bold"></EditText>
 
+        <TextView
+            android:id="@+id/defaultLocation"
+            android:layout_width="113dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/desiredLocation"
+            android:layout_marginTop="35dp"
+            android:backgroundTint="@color/black_overlay"
+            android:hint="Use phone location"
+            android:textColorLink="@android:color/holo_orange_dark"
+            android:textCursorDrawable="@drawable/orange_crusor"
+            android:textSize="30sp"
+            tools:textStyle="bold"></TextView>
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/welcomeFAB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/textView"
-            android:layout_marginTop="26dp"
-            android:layout_weight="0.26"
+            android:layout_alignEnd="@+id/textView2"
+            android:layout_alignTop="@+id/desiredLocation"
             android:clickable="true"
-            app:backgroundTint="@android:color/holo_orange_dark"
-            app:fabSize="mini"
             app:srcCompat="@android:drawable/ic_media_play" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/myLocationFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/defaultLocation"
+            android:layout_alignEnd="@+id/textView2"
+            app:srcCompat="@android:drawable/ic_menu_mylocation" />
     </RelativeLayout>
 
 
