--- a/SunFinder/app/src/main/res/layout-w900dp/location_list.xml
+++ b/SunFinder/app/src/main/res/layout-w900dp/location_list.xml
@@ -21,8 +21,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/location_list"
         android:name="ch.msengineering.sunfinder.LocationListFragment"
-        android:layout_width="@dimen/item_width"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight=".50"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
@@ -33,6 +34,6 @@
         android:id="@+id/location_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight=".50" />
 
 </LinearLayout>
